2001-09-27  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (dwarf2out_frame_finish): Never elide .debug_frame
	in favour of .eh_frame; fix eh test wrt USING_SJLJ_EXCEPTIONS.

Tue Sep 25 15:09:03 2001  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* doc/install.texi (Specific, sparc-sun-solaris2*): Document
	64-bit support.

2001-09-25  Janis Johnson  <janis187@us.ibm.com>
	    Jim Wilson  <wilson@redhat.com>

	* doc/install.texi (Specific, ia64-*-linux): Document.

2001-09-24  David Edelsohn <edelsohn@gnu.org>

	* rs6000.c (lwa_operand): Address must be word aligned.

2001-09-24  Janis Johnson  <janis187@us.ibm.com>

	* doc/install.texi (Final install): Request additional information
	in mail about successful builds.

2001-09-24  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* doc/install.texi: Markup fixes.
	Use Solaris 2, SunOS 4 as appropriate.
	(Specific, *-*-solaris2*): Explain this.
	Unconditionally warn against /usr/ucb tools.
	Remove Sun as warning, obsolete.
	Move X11 header bug workaround here, update patches.
	(Specific, sparc-sun-solaris2*): Detail Sun as fix status.
	(Specific, sparc-sun-solaris2.7): Update patch 106950 status.

2001-09-21  Richard Henderson  <rth@redhat.com>

	* tree.def (FDESC_EXPR): New.
	* expr.c (expand_expr): Handle it.
	* varasm.c (initializer_constant_valid_p): Likewise.
	(output_constant): Likewise.
	* defaults.h (TARGET_VTABLE_USES_DESCRIPTORS): New.
	* config/ia64/ia64.h (TARGET_VTABLE_USES_DESCRIPTORS): New.
	(ASM_OUTPUT_FDESC): New.

2001-09-20  Andrew MacLeod  <amacleod@redhat.com>

	* testsuite/gcc.c-torture/execute/990208-1.x: New. XFAIL at -O3
	on ia64.

Thu Sep 20 12:49:34 2001  J"orn Rennecke <amylaar@redhat.com>

	* sh.c (shiftcosts): Don't use shiftcosts array for modes wider
	than SImode.

Thu Sep 20 12:18:41 2001  J"orn Rennecke <amylaar@redhat.com>

	* sh.c (initial_elimination_offset): When seeing
	RETURN_ADDRESS_POINTER_REGNUM, force pr to be live.
	Fix FROM == RETURN_ADDRESS_POINTER_REGNUM case.
